src/snapshots/cargo_semver_checks__query__tests__enum_repr_transparent_removed.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/enum_repr_transparent_removed/": [
        {
            "name": String("Foo"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("Foo"),
            ]),
            "span_begin_line": Uint64(1),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("Bar"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("Bar"),
            ]),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Baz"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("StructStyleWithZeroSizedData"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("StructStyleWithZeroSizedData"),
            ]),
            "span_begin_line": Uint64(9),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("TupleStyleWithZeroSizedData"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("TupleStyleWithZeroSizedData"),
            ]),
            "span_begin_line": Uint64(16),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("StructStyleWithFoo"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("StructStyleWithFoo"),
            ]),
            "span_begin_line": Uint64(20),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("TupleStyleWithFoo"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("TupleStyleWithFoo"),
            ]),
            "span_begin_line": Uint64(27),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("StructStyleWithRef"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("StructStyleWithRef"),
            ]),
            "span_begin_line": Uint64(31),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("TupleStyleWithRef"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("TupleStyleWithRef"),
            ]),
            "span_begin_line": Uint64(38),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("StructStyleWithTupleStyle"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("StructStyleWithTupleStyle"),
            ]),
            "span_begin_line": Uint64(42),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("TupleStyleWithTuple"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("TupleStyleWithTuple"),
            ]),
            "span_begin_line": Uint64(49),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("StructStyleWithGeneric"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("StructStyleWithGeneric"),
            ]),
            "span_begin_line": Uint64(53),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("TupleStyleWithGeneric"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("TupleStyleWithGeneric"),
            ]),
            "span_begin_line": Uint64(60),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("StructStyleWithSpecificZeroSizedData"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("StructStyleWithSpecificZeroSizedData"),
            ]),
            "span_begin_line": Uint64(67),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("TupleStyleWithSpecificZeroSizedData"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("enum_repr_transparent_removed"),
                String("TupleStyleWithSpecificZeroSizedData"),
            ]),
            "span_begin_line": Uint64(74),
            "span_filename": String("src/lib.rs"),
            "transparent_variant_name": List([
                String("Bar"),
            ]),
            "visibility_limit": String("public"),
        },
    ],
}
