src/snapshots/cargo_semver_checks__query__tests__enum_struct_variant_field_missing.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/enum_struct_variant_field_missing/": [
        {
            "enum_name": String("Enum"),
            "field_name": String("bar"),
            "path": List([
                String("enum_struct_variant_field_missing"),
                String("Enum"),
            ]),
            "span_begin_line": Uint64(6),
            "span_filename": String("src/lib.rs"),
            "variant_name": String("FieldWillBeMissing"),
        },
    ],
}
