src/snapshots/cargo_semver_checks__query__tests__enum_tuple_variant_field_added.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/enum_struct_field_hidden_from_public_api/": [
        {
            "enum_name": String("AddedVariantField"),
            "field_name": String("1"),
            "path": List([
                String("enum_struct_field_hidden_from_public_api"),
                String("AddedVariantField"),
            ]),
            "span_begin_line": Uint64(41),
            "span_filename": String("src/lib.rs"),
            "variant_name": String("TupleVariant"),
        },
    ],
    "./test_crates/enum_tuple_variant_field_added/": [
        {
            "enum_name": String("PublicEnum"),
            "field_name": String("2"),
            "path": List([
                String("enum_tuple_variant_field_added"),
                String("PublicEnum"),
            ]),
            "span_begin_line": Uint64(3),
            "span_filename": String("src/lib.rs"),
            "variant_name": String("TupleVariantWithFieldAdded"),
        },
    ],
}
