src/snapshots/cargo_semver_checks__query__tests__enum_tuple_variant_field_now_doc_hidden.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/enum_tuple_variant_field_now_doc_hidden/": [
        {
            "enum_name": String("PulicEnumA"),
            "field_name": String("0"),
            "path": List([
                String("enum_tuple_variant_field_now_doc_hidden"),
                String("PulicEnumA"),
            ]),
            "span_begin_line": Uint64(7),
            "span_filename": String("src/lib.rs"),
            "variant_name": String("TupleVariantWithPublicField"),
        },
    ],
}
