src/snapshots/cargo_semver_checks__query__tests__enum_variant_missing.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/enum_struct_variant_field_missing/": [
        {
            "enum_name": String("IgnoredEnum"),
            "path": List([
                String("enum_struct_variant_field_missing"),
                String("IgnoredEnum"),
            ]),
            "span_begin_line": Uint64(14),
            "span_filename": String("src/lib.rs"),
            "variant_name": String("StructVariantWillBeMissing"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/enum_variant_missing/": [
        {
            "enum_name": String("VariantWillBeRemoved"),
            "path": List([
                String("enum_variant_missing"),
                String("VariantWillBeRemoved"),
            ]),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
            "variant_name": String("Bar"),
            "visibility_limit": String("public"),
        },
    ],
}
