src/snapshots/cargo_semver_checks__query__tests__exported_function_changed_abi.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/exported_function_changed_abi/": [
        {
            "abi_raw_name": String("Rust"),
            "export_name": String("public_null_export_name_func_will_become_c"),
            "name": String("public_null_export_name_func_will_become_c"),
            "new_abi_raw_name": String("C"),
            "span_begin_line": Uint64(2),
            "span_filename": String("src/lib.rs"),
        },
        {
            "abi_raw_name": String("Rust"),
            "export_name": String("private_null_export_name_func"),
            "name": String("private_null_export_name_func"),
            "new_abi_raw_name": String("C"),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
        },
        {
            "abi_raw_name": String("C"),
            "export_name": String("exported_c_func_that_will_become_c_unwind"),
            "name": String("exported_c_func_that_will_become_c_unwind"),
            "new_abi_raw_name": String("C-unwind"),
            "span_begin_line": Uint64(11),
            "span_filename": String("src/lib.rs"),
        },
        {
            "abi_raw_name": String("C-unwind"),
            "export_name": String("exported_c_unwind_func_that_will_become_c"),
            "name": String("exported_c_unwind_func_that_will_become_c"),
            "new_abi_raw_name": String("C"),
            "span_begin_line": Uint64(14),
            "span_filename": String("src/lib.rs"),
        },
        {
            "abi_raw_name": String("Rust"),
            "export_name": String("exported_rust_func_that_will_become_c"),
            "name": String("exported_rust_func_that_will_become_c"),
            "new_abi_raw_name": String("C"),
            "span_begin_line": Uint64(17),
            "span_filename": String("src/lib.rs"),
        },
        {
            "abi_raw_name": String("Rust"),
            "export_name": String("exported_rust_func_that_will_become_c_unwind"),
            "name": String("exported_rust_func_that_will_become_c_unwind"),
            "new_abi_raw_name": String("C-unwind"),
            "span_begin_line": Uint64(20),
            "span_filename": String("src/lib.rs"),
        },
        {
            "abi_raw_name": String("Rust"),
            "export_name": String("different_exported_name"),
            "name": String("actual_function_name_that_will_become_c"),
            "new_abi_raw_name": String("C"),
            "span_begin_line": Uint64(23),
            "span_filename": String("src/lib.rs"),
        },
        {
            "abi_raw_name": String("Rust"),
            "export_name": String("different_exported_name2"),
            "name": String("actual_function_name_that_will_become_c_unwind"),
            "new_abi_raw_name": String("C-unwind"),
            "span_begin_line": Uint64(26),
            "span_filename": String("src/lib.rs"),
        },
    ],
}
