src/snapshots/cargo_semver_checks__query__tests__function_changed_abi.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/exported_function_changed_abi/": [
        {
            "abi_name": String("Rust"),
            "name": String("public_null_export_name_func_will_become_c"),
            "new_abi_name": String("C"),
            "path": List([
                String("exported_function_changed_abi"),
                String("public_null_export_name_func_will_become_c"),
            ]),
            "span_begin_line": Uint64(2),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/function_changed_abi/": [
        {
            "abi_name": String("C"),
            "name": String("c_function_becomes_rust"),
            "new_abi_name": String("Rust"),
            "path": List([
                String("function_changed_abi"),
                String("c_function_becomes_rust"),
            ]),
            "span_begin_line": Uint64(1),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "abi_name": String("C"),
            "name": String("c_function_becomes_rust_implicitly"),
            "new_abi_name": String("Rust"),
            "path": List([
                String("function_changed_abi"),
                String("c_function_becomes_rust_implicitly"),
            ]),
            "span_begin_line": Uint64(3),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "abi_name": String("Rust"),
            "name": String("rust_function_becomes_c"),
            "new_abi_name": String("C"),
            "path": List([
                String("function_changed_abi"),
                String("rust_function_becomes_c"),
            ]),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "abi_name": String("Rust"),
            "name": String("implicit_rust_function_becomes_c"),
            "new_abi_name": String("C"),
            "path": List([
                String("function_changed_abi"),
                String("implicit_rust_function_becomes_c"),
            ]),
            "span_begin_line": Uint64(7),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "abi_name": String("C"),
            "name": String("implicit_c_function_becomes_rust"),
            "new_abi_name": String("Rust"),
            "path": List([
                String("function_changed_abi"),
                String("implicit_c_function_becomes_rust"),
            ]),
            "span_begin_line": Uint64(9),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "abi_name": String("system"),
            "name": String("system_function_becomes_c"),
            "new_abi_name": String("C"),
            "path": List([
                String("function_changed_abi"),
                String("system_function_becomes_c"),
            ]),
            "span_begin_line": Uint64(15),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
