src/snapshots/cargo_semver_checks__query__tests__function_const_removed.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/function_const_removed/": [
        {
            "name": String("add"),
            "path": List([
                String("function_const_removed"),
                String("add"),
            ]),
            "span_begin_line": Uint64(1),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
